force-app/main/default/objects/FulfilmentType__c/FulfilmentType__c.object-meta.xml
<CustomObject>
    <description>Used to store process specific information for each type of fulfilment</description>
    <label>Fulfilment Type</label>
    <nameField>
        <label>Fulfilment Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfilment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>