force-app/main/default/objects/FulfilmentType__c/fields/DestinationProductRecordType__c.field-meta.xml
<CustomField>
    <fullName>DestinationProductRecordType__c</fullName>
    <description>The type of product that this fulfilment type relates to. This supports the legacy financial product model.</description>
    <label>Destination product record type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>