force-app/main/default/objects/FulfilmentType__c/fields/DestinationProductType__c.field-meta.xml
<CustomField>
    <fullName>DestinationProductType__c</fullName>
    <description>The type of product that this fulfilment type relates to. Deprecated by the lookup field.</description>
    <label>zDel Destination product type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>