force-app/main/default/objects/FulfilmentType__c/fields/ExcludeFromUpdate__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if all fulfilments of this type should be excluded from updates (eg open products)</description>
    <label>Exclude from update</label>
    <type>Checkbox</type>
</CustomField>