force-app/main/default/objects/FulfilmentType__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The product that  this fulfilment type is associated with</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Fulfilment Types</relationshipLabel>
    <relationshipName>Fulfilment_Types</relationshipName>
    <type>Lookup</type>
</CustomField>