force-app/main/default/objects/FulfilmentType__c/fields/RecommendationType__c.field-meta.xml
<CustomField>
    <fullName>RecommendationType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recommendation type that this fulfilment type relates to</description>
    <label>Recommendation Type</label>
    <referenceTo>RecommendationType__c</referenceTo>
    <relationshipName>Fulfilment_types</relationshipName>
    <type>Lookup</type>
</CustomField>