force-app/main/default/objects/FulfilmentType__c/fields/RecommendationTypeReference__c.field-meta.xml
<CustomField>
    <fullName>RecommendationTypeReference__c</fullName>
    <description>Used to refer to the recommendation type without requiring the record id</description>
    <label>Recommendation type reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>