force-app/main/default/objects/FulfilmentType__c/fields/ReferenceName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceName__c</fullName>
    <description>Used to reference the types across orgs</description>
    <externalId>true</externalId>
    <label>Reference name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>