force-app/main/default/objects/FulfilmentType__c/fields/TransferFormsRequirement__c.field-meta.xml
<CustomField>
    <fullName>TransferFormsRequirement__c</fullName>
    <description>Describes the requirements for transfer forms for this type of fulfilment</description>
    <label>Transfer forms requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>