force-app/main/default/objects/FulfilmentType__c/fields/UpdateEmailHeadline__c.field-meta.xml
<CustomField>
    <fullName>UpdateEmailHeadline__c</fullName>
    <description>Used for update emails to allow for well formatted titles</description>
    <label>Update email headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>