force-app/main/default/objects/FulfilmentType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>DestinationProductType__c</columns>
    <columns>RecommendationType__c</columns>
    <columns>UpdateEmailHeadline__c</columns>
    <columns>ExcludeFromUpdate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>